--- a/app/src/styles/main.scss
+++ b/app/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import "./normalize.css";
 
 $primary-color: green;
+$backlight: #ffdf9a;
 
 h1 {
   color: $primary-color;
@@ -14,9 +15,68 @@ li.task {
   }
 }
 
+body {
+	background-color: #a0B7f6;
+}
+
+#main {
+	float: left;
+}
+
+#title {
+	font-size: 30px;
+	margin: 30px;
+	font-weight: thick;
+}
+
+#fetch-form {
+	margin-left: 30px;
+	margin-top: 20px;
+	width: 31%;
+	height: 30%;
+	float: left;
+	padding: 20px;
+	border-radius: 3px;
+	background-color: $backlight;
+}
+
+#fetch-form  button, input {
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+.twin-containers {
+	width: 31%;
+	height: 50%;
+	float: left;
+	margin-left: 30px;
+	background-color: $backlight;
+}
+
+.assign-form {
+	background-color: $backlight;
+	border-radius: 3px;
+	padding: 20px;
+}
+
+.assign-form > div {
+	margin-top: 10px;
+	text-align: center;
+}
+
+.assign-form > span {
+	font-weight: thick;
+	margin-right: 5px;
+}
+
+.assign-form  input {
+	margin-left: 15px;
+	margin-right: auto;
+}
+
 .pads {
 	height: 100px;
-	margin: 5px;
+	margin: 12px;
 	width: 100px;
 	float: left;
 	border-radius: 3px;
