--- a/app/src/styles/main.scss
+++ b/app/src/styles/main.scss
@@ -35,9 +35,11 @@ body {
 	width: 31%;
 	height: 30%;
 	float: left;
-	padding: 20px;
+	padding-bottom: 45px;
 	border-radius: 3px;
 	background-color: $backlight;
+	padding-left: 20px;
+	padding-top: 10px;
 }
 
 #fetch-form  button, input {
@@ -56,7 +58,9 @@ body {
 .assign-form {
 	background-color: $backlight;
 	border-radius: 3px;
-	padding: 20px;
+	padding-bottom: 20px;
+	padding-left: 20px;
+	padding-top: 3px;
 }
 
 .assign-form > div {
